--- a/app/views/blogs/posts.html.erb
+++ b/app/views/blogs/posts.html.erb
@@ -1,4 +1,12 @@
 <% if @posts.present? %>
+    <div class="page-header">
+      <div class="row">
+        <%= form_tag(posts_blog_path(id: @blog), method: :get) do %>
+          <%= text_field_tag :q_post, params[:q_post], placeholder: 'enter tag or text to search posts', class: 'form-control' %><br>
+          <%= submit_tag 'Search', class: 'btn btn-success' %>
+        <% end %>
+      </div>
+    </div>
   <% @posts.each do |post| %>
       <div class="page-header">
         <div class="row">
