--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -16,7 +16,7 @@
   <div class="form-group">
     <%= f.label :blog, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.collection_select :blog_id, @blogs, :id, :title, {include_blank: 'Please select a blog', required: true}, class: "form-control" %>
+      <%= f.collection_select :blog_id, @blogs, :id, :title, {include_blank: 'Please select a blog'}, required: true, class: "form-control" %>
     </div>
   </div>
   <div class="form-group">
